--- a/homework2.Rmd
+++ b/homework2.Rmd
@@ -47,6 +47,7 @@ library(vroom)
 
 # Climate change and temperature anomalies 
 
+Are these changes showing up peeps>
 
 If we wanted to study climate change, we can find data on the *Combined Land-Surface Air and Sea-Surface Water Temperature Anomalies* in the Northern Hemisphere at [NASA's Goddard Institute for Space Studies](https://data.giss.nasa.gov/gistemp). The [tabular data of temperature anomalies can be found here](https://data.giss.nasa.gov/gistemp/tabledata_v4/NH.Ts+dSST.txt)
 
