--- a/final group project.Rmd
+++ b/final group project.Rmd
@@ -376,3 +376,24 @@ huxtable::huxreg(model1, model2, model3, model4, model5, model6)
 
 ```
 
+We will now clean our race column. If we run a the `unique` function in r on the race column we see that there are 44 different categories. We will separate the race into white, non white and unanswered.
+
+We then take out the Not Answered values as can be seen in the code below. 
+
+```{r}
+
+ppp_data_final_clean <- ppp_data_clean %>%
+  drop_na(race) %>% 
+  mutate(
+    race_filtered = case_when(
+    str_detect(race, "^Whitea*") ~ "White",
+    str_detect(race, "Another option not listed here or prefer not to answer*") ~ "Not Answered",
+    TRUE ~ "Non White"
+    )
+  ) %>% 
+  filter(!race_filtered=="Not Answered")
+
+
+
+```
+
