--- a/final group project.Rmd
+++ b/final group project.Rmd
@@ -461,4 +461,4 @@ All in all,  our simplistic model 1 is not very good at predicting total salary,
 
 Our models 2-5 consecutively add other variables to the model: years of experience in field, highest level of education completed, gender and overall years of professional experience. With each addition the R squared measure increases, indicating that our model is explaining more of the dependent variable total salary. While adding new variables, our model follows the same logic as described above. For years of experience in field all of the variables are statistically significant for our model while compared the baseline of 1 year or less. The salary increase goes up with the amount of years in industry. In model 3, highest level of education completed has the baseline of College education with all other variables being statistically significant, and  each degree at a lower level than college earning less and each degree at a higher level earning more than a college educated person average, while controlling for the other variable categories in our model. Model 4 has male as a baseline with woman being statistically significant, indicating that women earn on average 26779 dollars less than men while controlling for other variables. Model 5 also incorporates overall years of professional experience, for which only two variables are statistically significant, meaning that the category is not very good for explaining the differences in total salary. This is also supported by a comparison of th R squared measures for model 4 and 5 (seen in the table comparison of regression model results), as the R squared only increases from 19% to 19.1%. 
 
-Finally, we derive our final model 6 which incorporates years of experience in field, highest level of education completed, gender and overall years of professional experience, gender and race. This model achieves an R squared of 19.3%, showing that our model variables explain 19.3% of the dependent variable total salary. Race is deemed statistically significant at the 0.01 p-value, showing that white people on earn on average -12532.0 dollars less than people we have grouped as non-white. It is important to note that in our data cleaning process, race originally had 44 different input variables and grouping these to only 3 (white, non-white and prefer not to say) influences our prediction results. All in all, the standard error is 83870 dollars, showing that while our final linear regression model fits the data better than our initial model 1, on average the actual total salary still deviates from our regression line by a substantial amount of 83870 dollars. Hence, the R squared and residual standard errors indicate a limited explanatory power of our model and that it should be significantly improved by adding better explanatory variables. We hypothesise that looking at the state variable in the US would increase model accuracy, as people in wealthier states such as Los Angeles or New York earn on average more than in other states. The comparison of our 6 models and their number of observations, R squared values and statistically significant variables is given as the last table in our analysis.
+Finally, we derive our final model 6 which incorporates industry, years of experience in field, highest level of education completed, gender and overall years of professional experience, gender and race. This model achieves an R squared of 19.3%, showing that our model variables explain 19.3% of the dependent variable total salary. Race is deemed statistically significant at the 0.01 p-value, showing that white people on earn on average -12532.0 dollars less than people we have grouped as non-white. It is important to note that in our data cleaning process, race originally had 44 different input variables and grouping these to only 3 (white, non-white and prefer not to say) influences our prediction results. All in all, the standard error is 83870 dollars, showing that while our final linear regression model fits the data better than our initial model 1, on average the actual total salary still deviates from our regression line by a substantial amount of 83870 dollars. Hence, the R squared and residual standard errors indicate a limited explanatory power of our model and that it should be significantly improved by adding better explanatory variables. We hypothesise that looking at the state variable in the US would increase model accuracy, as people in wealthier states such as Los Angeles or New York earn on average more than in other states. The comparison of our 6 models and their number of observations, R squared values and statistically significant variables is given as the last table in our analysis.
